style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: 'Clash Display', sans-serif;
}

body {
    background-color: #161819;
}

header {
    padding: 30px 40px;
    position: relative;
}

header nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: #ECECEC;
}

header nav .gp1 i {
    font-size: 16px;
    cursor: pointer;
    width: 50px;
    height: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 100px;
    transition: all ease-in-out 0.2s
}

header nav .gp1 i:hover {
    background-color: #939b9f15;
}

header nav h1 {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    z-index: 10;
    font-size: 4.5rem;
}

header nav .gp2 {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    gap: 10px;
}

header nav .gp2 i {
    width: 50px;
    height: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 16px;
    cursor: pointer;
    border: 1px solid #414447;
    border-radius: 100px;
    transition: all ease-in-out 0.2s
}

header nav .gp2 p {
    cursor: pointer;
    color: #939b9f;
    font-family: "Poppins", sans-serif;
    font-weight: 400;
    font-size: 18px;
    transition: all ease-in-out 0.2s
}

header nav .gp2 p:hover {
    color: #ECECEC;
}

header nav .gp2 i:hover {
    background-color: #939b9f15;
}

main, main .game{
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 15px;
}

main .game .count{
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 5px;
}

main .game .count button{
    width: 50px;
    height: 50px;
    font-size: 30px;
    cursor: pointer;
    border: none;
    outline: none;
    border-radius: 5px;
    background-color: #707070;
    color: #ECECEC;
}

main .game .count button:disabled{
    background-color: #434445;
    color: #818283;
}
main .game .count input{
    border: 2px solid #303436;
    outline: none;
    border-radius: 5px;
    width: 50px;
    height: 50px;
    padding-left: 10px;
    background-color: transparent;
    font-size: 24px;
    color: #ECECEC;
}

@media screen and (max-width: 1000px) {
    header nav h1 {
        font-size: 3.5rem;
    }

    header nav .gp1 i,
    header nav .gp2 i {
        width: 40px;
        height: 40px;
        font-size: 14px;
    }

    header nav .gp2 p {
        font-size: 16px;
    }
}

@media screen and (max-width: 867px) {

    header nav .gp1,
    header nav .gp2 {
        display: none;
    }

    header {
        padding-top: 40px;
    }
}

@media screen and (max-width:450px) {
    header nav h1 {
        font-size: 2.7rem;
    }
}

